# eso-addon-index

./: .gitignore  .luacheckrc  CLAUDE.md  LICENSE  README.md  eso-addon-index-implementation.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: addon-submission.yml  bug-report.yml  config.yml
.github/workflows/: build-index.yml  check-releases.yml  validate-pr.yml
addons/: _schema.toml
addons/actiondurationreminder/: addon.toml
addons/aui/: addon.toml
addons/bandits-user-interface/: addon.toml
addons/beammeup/: addon.toml
addons/breadcrumbs/: addon.toml
addons/bsjogroup/: addon.toml
addons/buffthegroup/: addon.toml
addons/bugcatcher/: addon.toml
addons/combatmetrics/: addon.toml
addons/combatmetronome/: addon.toml
addons/crutchalerts/: addon.toml
addons/elmsmarkers/: addon.toml
addons/exoyscruxtracker/: addon.toml
addons/exoysproctimer/: addon.toml
addons/groupsetupwarnings/: addon.toml
addons/hodorreflexes/: addon.toml
addons/huntsmanwarmaskreminder/: addon.toml
addons/hypertools/: addon.toml
addons/improveddeathrecap/: addon.toml
addons/libaddonmenu/: addon.toml
addons/libaddonmenu-2-0/: addon.toml
docs/: ARCHITECTURE_CONSIDERATIONS.md  CONTRIBUTING.md  REVIEW_PROCESS.md  SCHEMA.md  addon-manager-client-context.md
public/: categories.json  feed.json  index.html  index.json  index.min.json  missing-dependencies.json  releases-history.json  releases.atom  version-history.json  versions.json
scripts/: build-index.py  luacheck-remote.py  poll-releases.py  validate.py
(+24 files in other folders)
